# harfbuzz-wasm-examples

./: README.md
bubblekern/: Bubblekern.glyphs  Cargo.toml  Makefile
bubblekern/src/: dist.rs  glyph.rs  lib.rs
calculator/: Cargo.toml  Makefile
calculator/src/: lib.rs
debugglyph/: Cargo.toml  Makefile
debugglyph/src/: hbwasm.rs  lib.rs
gulzar/: Cargo.toml  Makefile
gulzar/src/: glyph.rs  lib.rs
handwriting/: Cargo.toml  Hand.glyphs  Makefile  fvar.ttx
handwriting/src/: lib.rs
harfbuzz-wasm/src/: lib.rs
hieroglyphs/: Cargo.toml  Makefile
hieroglyphs/src/: ast.rs  lib.rs  parser.lalrpop  tokenizer.rs
inception/: Cargo.toml  Inception.glyphs  Makefile  colr.ttx  fvar.ttx
inception/src/: lib.rs
nastaliq/: Makefile
nastaliq/src/: dist.rs  glyph.rs  lib.rs
network/: Cargo.toml  Makefile  Network.glyphs
network/src/: lib.rs
ruqaa/: Cargo.toml  Makefile
ruqaa/src/: dist.rs  glyph.rs  lib.rs
shadow/: Cargo.toml  Makefile  colr.ttx
shadow/src/: lib.rs
