[package]
name = "hieroglyphs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.0"
harfbuzz-wasm = { path="../harfbuzz-wasm"}
# lalrpop-util = { version = "0.19.7", features=["lexer"]}
lalrpop-util = { version = "0.19.7"}
regex = "1"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.19.7"
